# jupyter-cleaner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
jupyter_cleaner/: jupyter_cleaner.py
tests/: test_base.py
