[tool.poetry]
name = "jupyter-cleaner"
version = "0.1.0"
description = "Easy git tracking of Jupyter lab files"
license = "MIT"
authors = ["Daniel Stoops <danielstoops25@gmail.com>"]
maintainers = ["Daniel Stoops <danielstoops25@gmail.com>"]
readme = "README.md"
packages = [{include = "jupyter_cleaner"}]
homepage = "https://github.com/Stoops-ML/jupyter-cleaner"

[tool.poetry.dependencies]
python = "^3.7"
black = {extras = ["jupyter"], version = "*"}
reorder-python-imports = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
tox = "*"
flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jupyter-cleaner = "jupyter_cleaner.jupyter_cleaner:main"

[tool.jupyter-cleaner]
execution_count=0
remove_code_output=true
format=true
reorder_imports=true
indent_level=4

[tool.pytest.ini_options]
testpaths = "tests"

[tool.tox]
# run before tox: pyenv local 3.7.9, 3.8.10, 3.9.13, 3.10.10, 3.11.2
legacy_tox_ini = """
[tox]
envlist =
    python37
    python38
    python39
    python310
    python311
    lint
isolated_build = true

[testenv]
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync
setenv =
    PYTHONPATH = {toxinidir}
commands =
    python -m pytest --basetemp={envtmpdir}

[testenv:lint]
extras = test
commands =
    python -m flake8 jupyter_cleaner/ tests/
    python -m mypy jupyter_cleaner/ tests/
    python -m black --check --diff .
"""
