[metadata]
name = jupyter_cleaner
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
description = Easy git tracking of Jupyter notebooks and lab
url = https://github.com/Stoops-ML/???
author = Daniel Stoops
maintainer = Daniel Stoops
author_email = danielstoosp25@gmail.com
maintainer_email = danielstoosp25@gmail.com
platforms = win32

[flake8]
max-line-length = 88
extend-ignore = E203, E501

[tox:tox]
; run before tox: pyenv local 3.7.9, 3.8.10, 3.9.13, 3.10.10, 3.11.2
envlist =
    python37
    python38
    python39
    python310
    python311
    lint
isolated_build = true

[testenv]
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync
setenv =
    PYTHONPATH = {toxinidir}
commands =
    python -m pytest --basetemp={envtmpdir}

[testenv:lint]
extras = test
commands =
    python -m flake8 jupyter_cleaner/ tests/
    python -m mypy jupyter_cleaner/ tests/
    python -m black --check --diff .
